--- a/AFCU/ClientApp/src/index.html
+++ b/AFCU/ClientApp/src/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
-    <title>AFCU</title>
+    <title>AFCU - Coding Exercise</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+</head>
   <body>
-    <app-root>Loading...</app-root>
+    <app-root></app-root>
   </body>
 </html>
